test/analyze/type_check/int_literal/out_of_range_error.myte
module test

fun ints() {
  // In range
  (0: Int);
  (-0: Int);
  (0x0: Int);
  (-0x0: Int);
  (1: Int);
  (-1: Int);

  // Max Int is in range
  (2147483647: Int);
  (0x7FFFFFFF: Int);
  (0b01111111111111111111111111111111: Int);

  // Above max Int is out of range
  (2147483648: Int);
  (0x80000000: Int);
  (0b10000000000000000000000000000000: Int);

  // Min Int is in range
  (-2147483648: Int);
  (-0x80000000: Int);
  (-0b10000000000000000000000000000000: Int);

   // Below min Int is out of range
  (-2147483649: Int);
  (-0x80000001: Int);
  (-0b10000000000000000000000000000001: Int);

  // Outside representable 64-bit range
  (0x8000000000000000: Int);
  (-0x8000000000000001: Int);
}

fun bytes() {
  // In range
  (0: Byte);
  (-0: Byte);
  (1: Byte);
  (-1: Byte);

  // Max Byte is in range
  (127: Byte);
  (0x7F: Byte);
  (0b01111111: Byte);

  // Above max Byte is out of range
  (128: Byte);
  (0x80: Byte);
  (0b10000000: Byte);

  // Min Byte is in range
  (-128: Byte);
  (-0x80: Byte);
  (-0b10000000: Byte);

  // Below min Byte is out of range
  (-129: Byte);
  (-0x81: Byte);
  (-0b10000001: Byte);

  // Outside representable 64-bit range
  (0x8000000000000000: Byte);
  (-0x8000000000000001: Byte);
}

fun longs() {
  // In range
  (0: Long);
  (-0: Long);
  (1: Long);
  (-1: Long);

  // Max Long is in range
  (9223372036854775807: Long);
  (0x7FFFFFFFFFFFFFFF: Long);
  (0b0111111111111111111111111111111111111111111111111111111111111111: Long);

  // Above max Long is out of range
  (9223372036854775808: Long);
  (0x8000000000000000: Long);
  (0b1000000000000000000000000000000000000000000000000000000000000000: Long);

  // Min Long is in range
  (-9223372036854775808: Long);
  (-0x8000000000000000: Long);
  (-0b1000000000000000000000000000000000000000000000000000000000000000: Long);

  // Below min Long is out of range
  (-9223372036854775809: Long);
  (-0x8000000000000001: Long);
  (-0b1000000000000000000000000000000000000000000000000000000000000001: Long);
}

fun main() {}